fix: update icon viewer focus style and link icon alignment

--- a/apps/docs/src/app/components/icons-viewer/_icons-viewer-theme.scss
+++ b/apps/docs/src/app/components/icons-viewer/_icons-viewer-theme.scss
@@ -18,9 +18,8 @@
             color: var(--kbq-foreground-contrast-secondary);
         }
 
-        &:focus-visible {
-            outline: 1px solid var(--kbq-states-line-focus-theme) !important;
-            border-color: var(--kbq-states-line-focus-theme);
+        &:focus {
+            outline: 2px solid var(--kbq-theme-default);
         }
 
         &:hover {
@@ -43,6 +42,7 @@
     }
 
     .docs-icons-viewer__header .kbq-input,
+    .docs-icons-viewer__table-cell-name,
     .docs-icon-preview-modal__content .kbq-select,
     .docs-icon-preview-modal__buttons .kbq-button,
     .kbq-select-overlay .docs-icon-preview-modal__select-option,
