--- a/packages/components/link/_link-theme.scss
+++ b/packages/components/link/_link-theme.scss
@@ -34,7 +34,7 @@
             vertical-align: baseline;
 
             &:has(> svg) {
-                vertical-align: text-top;
+                vertical-align: middle;
                 line-height: 0;
             }
         }
